--- a/async-service-test-model/pom.xml
+++ b/async-service-test-model/pom.xml
@@ -22,7 +22,7 @@ limitations under the License.
     <artifactId>async-service-test-model</artifactId>
     <version>3.0.15</version>
     <properties>
-        <archetype>library</archetype>
+        <archetype>model</archetype>
     </properties>
     <licenses>
         <license>
