--- a/tribefire-services-integration-test/build.xml
+++ b/tribefire-services-integration-test/build.xml
@@ -15,5 +15,5 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <project xmlns:artifact="antlib:org.apache.maven.artifact.ant" xmlns:bt="antlib:com.braintribe.build.ant.tasks" basedir="." default="install">
-	<bt:import artifact="com.braintribe.devrock.ant:library-ant-script#1.0" useCase="DEVROCK"/>
+	<bt:import artifact="com.braintribe.devrock.ant:integration-test-ant-script#1.0" useCase="DEVROCK"/>
 </project>
