Adding integrtion-tests options to GH workflows

--- a/.github/workflows/periodic.yaml
+++ b/.github/workflows/periodic.yaml
@@ -10,5 +10,7 @@ jobs:
     uses: hiconic-os/hiconic.ci.workflows/.github/workflows/range.yaml@main
     secrets: inherit
     with:
+      job-name: 'periodic'
       range: "."
       publish: false
+      run-integration-tests: true
